--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@types/uikit": "^3.3.1",
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.20.0",
     "contentful": "^7.14.7",
     "framer-motion": "^2.7.7",
     "next": "9.5.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "uikit": "^3.5.8"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
